--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             width:100%;
             padding:20px 100px;
             display:flex;
-            justify-content: space-between;
+            justify-content: space-around;
             align-items: center;
             z-index: 99;
             opacity: 15;
